fixed footer-container gap

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -53,7 +53,7 @@ address {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    gap: 2.5rem;
+    gap: 2rem;
     padding-top: 2.5rem;
     font-size: 0.875rem;
     line-height: 100%;
